# english_learning_app

./: LICENSE  README.md  app.py  pyproject.toml
custom_types/: problem_types.py
data/: example.listening.yaml  example.reading.yaml  example.writing.yaml
data/topics/: topics.csv
logic/: generate_problem.py  mock.py  prompts.py  score_problem.py  topics.py
usecases/: callbacks.py  get_problem.py  get_problems.py  score_problem.py  transform_text_to_speech.py
views/: problem_answer.py  problem_scoring.py  problem_setting.py
views/listening/: problem_answer.py  problem_scoring.py
views/reading/: problem_scoring.py
views/writing/: problem_answer.py  problem_scoring.py
